# FastCGI

./: .gitignore  CMakeLists.txt  FastCGIConfig.cmake.in  test.c
include/: fastcgi.h  fcgi.h
source/: fcgi.c
